<resources>
    <string name="app_name">UAS_Film</string>
    <string name="tab_layout_description">deskripsi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uname">Username</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="lg">Login</string>
    <string name="rg">Register</string>
    <string name="rmmbr">Remember me</string>
    <string name="forgot">Forgot password</string>
    <string name="new_mmbr">New member?</string>
    <string name="rgstr">Create an Account</string>
    <string name="check">By checking the box you agree to our Terms and Conditions</string>
    <string name="already">Already Have an Account?</string>
    <string name="list_movie">LIST MOVIE</string>
    <string name="judul_Upfilm">UPLOAD MOVIE</string>
    <string name="hint_judul">Masukkan judul film</string>
    <string name="hint_deskrip">Masukkan deskripsi</string>
    <string name="up_image">Upload Image</string>
    <string name="up_film">Upload Now</string>
    <string name="deskrip">Bisa</string>
    <string name="judul_detail">DETAIL FILM</string>

</resources>