<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadAdminActivity"
    android:background="@drawable/bck"
    android:padding="20dp">

    <TextView
        android:id="@+id/judul_UploadMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/judul_Upfilm"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edt_judulFilm"
        app:layout_constraintTop_toBottomOf="@id/judul_UploadMovie"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/edt_judulFilm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_judul"
        android:background="@drawable/edittext_bkg"
        android:paddingStart="30dp"
        android:padding="13dp"
        app:layout_constraintTop_toBottomOf="@id/judul_UploadMovie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edt_desc" />

    <EditText
        android:id="@+id/edt_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="Description"
        android:background="@drawable/edittext_bkg"
        android:paddingStart="30dp"
        android:padding="13dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_judulFilm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewContent"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/edt_desc"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton">

        <ImageView
            android:id="@+id/edt_posterFilm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/image_upload"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/up_image"
        android:textColor="#FFFFFF"
        android:layout_marginTop="-170dp"
        app:layout_constraintTop_toBottomOf="@id/cardViewContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        />

    <Button
        android:id="@+id/btn_uploadFilm"
        android:layout_width="362dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/white"
        android:text="@string/up_film"
        android:textColor="@color/maroon"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uploadButton" />

</androidx.constraintlayout.widget.ConstraintLayout>